# spark-lakehouse-project

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: deploy-docs.yml
delta-lake/: index.html
docs/: delta-lake.md  iceberg.md  index.md  pyspark.md
iceberg/: index.html
notebooks/: 00_modelagem_dados.ipynb  02_apache_iceberg.ipynb
notebooks/00_modelagem_dados/: index.html
notebooks/01_delta_lake/: 01_delta_lake.ipynb  index.html
notebooks/02_apache_iceberg/: index.html
pyspark/: index.html
scripts/: setup_data.sh
search/: search_index.json
